--- a/WebContent/listMarkes.zul
+++ b/WebContent/listMarkes.zul
@@ -4,7 +4,7 @@
 <?link rel="icon" tye="image/x-icon" href="/images/favicon.ico"?>
 <?init class="com.alodiga.services.provider.web.security.InitiatorLoggedUser" ?>
 <zk xmlns:n="native">
-    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.ListCountryController" class="general-window">
+    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.ListMarkesController" class="general-window">
         <style src="/css/general.css"/>
         <borderlayout width="100%" height="100%" class="content-transparent">
             <north border="none" size="52px" class="content-transparent">
@@ -26,7 +26,7 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton label="${c:l('sp.crud.country.list')}" />
+                                                <toolbarbutton label="${c:l('sp.crud.braund.list')}" />
                                             </hlayout>
                                         </div>
                                         <div height="5px" width="100%" style="background:#333;" align="left"></div>
@@ -55,11 +55,8 @@
                                             <!--Record Listbox-->
                                             <listbox id="lbxRecords" fixedLayout="true" width="895px" height="530px" mold="paging">
                                                 <listhead>
-                                                    <listheader label="${c:l('sp.common.alias')}" width="190px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.code')}" width="70px"/>
-                                                    <listheader label="${c:l('sp.common.shortName')}" width="90px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.spanish')}" width="195px"/>
-                                                    <listheader label="${c:l('sp.common.english')}" width="195px"/>
+                                                    <listheader label="${c:l('sp.common.identifier')}" width="90px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.braund.name')}" width="705px"/>
                                                     <listheader label="-" width="50px"/>
                                                     <listheader label="-" width="50px"/>
                                                 </listhead>
