--- a/WebContent/listModels.zul
+++ b/WebContent/listModels.zul
@@ -4,7 +4,7 @@
 <?link rel="icon" tye="image/x-icon" href="/images/favicon.ico"?>
 <?init class="com.alodiga.services.provider.web.security.InitiatorLoggedUser" ?>
 <zk xmlns:n="native">
-    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.ListMetrologicalControlController" class="general-window">
+    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.ListModelsController" class="general-window">
         <style src="/css/general.css"/>
         <borderlayout width="100%" height="100%" class="content-transparent">
             <north border="none" size="52px" class="content-transparent">
@@ -26,7 +26,7 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton label="${c:l('sp.crud.product.list.meteorological')}" />
+                                                <toolbarbutton label="${c:l('sp.crud.mobileOperator.list')}" />
                                             </hlayout>
                                         </div>
                                         <div height="5px" width="100%" style="background:#333;" align="left"></div>
@@ -34,8 +34,8 @@
                                             <!--Filters for Searching-->
                                             <vlayout>
                                                 <hlayout style="text-align:right">
-                                                    <label value="${c:l('sp.common.alias')}" width="80px" sclass="lblbold"/>
-                                                    <textbox id="txtAlias" value="" width="150px" tooltiptext="${c:l('sp.common.searching.filter')}"/>
+                                                    <label value="${c:l('sp.common.contains')}" width="80px" sclass="lblbold"/>
+                                                    <textbox id="txtAlias" value="" width="200px" tooltiptext="${c:l('sp.common.searching.filter')}"/>
                                                 </hlayout>
 
                                                 <hlayout>
@@ -53,34 +53,20 @@
                                             </vlayout>
                                             <separator/>
                                             <!--Record Listbox-->
-                                            <listbox id="lbxRecords" fixedLayout="true" width="895px" height="530px">
+                                            <listbox id="lbxRecords" fixedLayout="true" width="895px" height="530px" mold="paging">
                                                 <listhead>
-                                                    <listheader label="${c:l('sp.common.control.braund')}" width="90px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.control.model')}" width="90px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.control.serial')}" width="125px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.control.rank')}" width="125px" sort="auto"/>
-                                                     <listheader label="${c:l('sp.common.control.date.calibration')}" width="125px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.control.ubication')}" width="125px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.control.minimun.scale')}" width="125px" sort="auto"/>
-                                                     <listheader label="${c:l('sp.common.control.type')}" width="125px" sort="auto"/>
-                                                    <listheader label="-" width="45px"/>
-                                                    <listheader label="-" width="45px"/>
-                                                    <listheader label="-" width="45px"/>
-                                                    
+                                                    <listheader label="${c:l('sp.common.identifier')}" width="90px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.braund.name')}" width="355px"/>
+                                                     <listheader label="${c:l('sp.common.model.name')}" width="350px"/>
+                                                    <listheader label="-" width="50px"/>
+                                                    <listheader label="-" width="50px"/>
                                                 </listhead>
                                             </listbox>
-                                            
-
-
-
-
-
 
                                         </div>
                                         <!--Download button-->
                                         <div align="right">
                                             <button id="btnDownload" label="${c:l('sp.common.actions.download')}"  width="80px" class="open gray" tooltiptext="${c:l('sp.common.actions.download.tooltip')}"/>
-                                            <button id="btnExportPdf" label="${c:l('sp.common.actions.download.pdf')}"  width="80px" class="open orange" tooltiptext="${c:l('sp.common.actions.download.pdf')}"/>
                                         </div>
                                     </vlayout>
                                 </div>
