--- a/WebContent/adminFooter.zul
+++ b/WebContent/adminFooter.zul
@@ -9,14 +9,14 @@
                 <label value="${c:l('sp.common.page.copyright')}" style="color:rgb(196, 196, 196);"/>
                 <separator orient="vertical" bar="true"/>
                 <label value="${c:l('sp.common.page.powerby')}" style="color:#837E76;"/>
-                <label value="CG TURBINES C.A." style="color:#CDA869; cursor:pointer;" onClick="Executions.sendRedirect(&quot;http://www.alodiga.us&quot;)"/>
+                <label value="CG Turbines SRL" style="color:#CDA869; cursor:pointer;" onClick="Executions.sendRedirect(&quot;http://www.alodiga.us&quot;)"/>
                 <separator/>
                 <separator/>
                 <separator/>
                 <separator/>
-                <image id="imgMasterCard" src="/images/icon-mc.png" style="cursor:pointer"/>
-                <image id="imgVerizon" src="/images/icon-veri.png" style="cursor:pointer"/>
-                <image id="imgVisa" src="/images/icon-visa.png" style="cursor:pointer"/>
+<!--                 <image id="imgMasterCard" src="/images/icon-mc.png" style="cursor:pointer"/> -->
+<!--                 <image id="imgVerizon" src="/images/icon-veri.png" style="cursor:pointer"/> -->
+<!--                 <image id="imgVisa" src="/images/icon-visa.png" style="cursor:pointer"/> -->
                 </hlayout>
             </div>
             <div></div>
