--- a/WebContent/admin.zul
+++ b/WebContent/admin.zul
@@ -100,7 +100,7 @@
                                 <label value="${c:l('sp.common.page.copyright')}" style="color:#CDA869;"/>
                                 <separator orient="vertical" bar="true"/>
                                 <label value="${c:l('sp.common.page.powerby')}" style="color:#837E76;"/>
-                                <label value="CG TURBINES C.A." style="color:#CDA869; cursor:pointer;" onClick="Executions.sendRedirect(&quot;https://cgturbines.com.ar/&quot;)"/>
+                                <label value="CG Turbines SRL" style="color:#CDA869; cursor:pointer;" onClick="Executions.sendRedirect(&quot;https://cgturbines.com.ar/&quot;)"/>
                                 <separator/>
                                 <separator/>
                                 <separator/>
