--- a/WebContent/adminAddStock.zul
+++ b/WebContent/adminAddStock.zul
@@ -207,9 +207,11 @@
                                                              </hlayout>
                                                         </row>
                                                         <row>
-                                                            <label value="${c:l('sp.automatic.service.options')}" sclass="lblbold"/>
+                                                            <label value="${c:l('sp.common.form')}" sclass="lblbold"/>
                                                             <hlayout>
+                                                              <textbox id="txtForm" maxlength="45" width="320px"/>
                                                               <button id="btnPPNSubmitFile" label="${c:l('sp.automatic.commission.loadCSV')}" upload="true,native" width="126px" height="25px" orient="vertical" class="open gray"/>
+                                                              <button  id="btnClear" width="150px" label="${c:l('sp.common.clear')}" class="open gray" />
                                                             </hlayout>
                                                         </row>
                                                          <row>
