--- a/WebContent/adminAddStock.zul
+++ b/WebContent/adminAddStock.zul
@@ -26,7 +26,7 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton label="${c:l('sp.crud.product.list')}" onClick='Executions.sendRedirect(&quot;listProducts.zul&quot;)'/>
+                                                <toolbarbutton label="${c:l('sp.crud.product.list.stock')}" onClick='Executions.sendRedirect(&quot;listProducts.zul&quot;)'/>
                                                  |
                                                  <toolbarbutton label="${c:l('sp.common.stock.add')}" />
                                             </hlayout>
@@ -210,7 +210,7 @@
                                                             <label value="${c:l('sp.common.form')}" sclass="lblbold"/>
                                                             <hlayout>
                                                               <textbox id="txtForm" maxlength="45" width="320px"/>
-                                                              <button id="btnPPNSubmitFile" label="${c:l('sp.automatic.commission.loadCSV')}" upload="true,native" width="126px" height="25px" orient="vertical" class="open gray"/>
+                                                              <button id="btnPPNSubmitFile" label="${c:l('sp.automatic.commission.loadCSV')}" upload="true,maxsize=4096" width="126px" height="25px" orient="vertical" class="open gray"/>
                                                               <button  id="btnClear" width="150px" label="${c:l('sp.common.clear')}" class="open gray" />
                                                             </hlayout>
                                                         </row>
