--- a/WebContent/adminAddWait.zul
+++ b/WebContent/adminAddWait.zul
@@ -224,6 +224,14 @@
                                                                <textbox id="txtWorkOrder" maxlength="45" width="320px"/>                                 
                                                             </hlayout>
                                                         </row>
+                                                        <row>
+                                                            <label value="${c:l('sp.common.form')}" sclass="lblbold"/>
+                                                            <hlayout>
+                                                              <textbox id="txtForm" maxlength="45" width="320px"/>
+                                                              <button id="btnPPNSubmitFile" label="${c:l('sp.automatic.commission.loadCSV')}" upload="true,maxsize=4096" width="126px" height="25px" orient="vertical" class="open gray"/>
+                                                              <button  id="btnClear" width="150px" label="${c:l('sp.common.clear')}" class="open gray" />
+                                                            </hlayout>
+                                                        </row>
                                                          <row>
                                                             <label value="${c:l('sp.common.observations')}" sclass="lblbold"/>
                                                             <hlayout>
